--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <!-- google icon -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <title>Simple Weather</title>
+  <title>PWA Clima</title>
 </head>
 
 <body>
